@@ -1521,6 +1521,12 @@ Also have a look at "Sonarr", another alternative TV show manager, available for
 
 			fi
 			#-------------------------------------------------------------------------------
+			#Move fake-hwclock data store to RAM: https://github.com/Fourdee/DietPi/issues/2396
+			systemctl stop fake-hwclock
+			G_CONFIG_INJECT 'FILE=' 'FILE=/tmp/fake-hwclock.dat' /etc/default/fake-hwclock
+			rm -f /etc/fake-hwclock.data
+			systemctl restart fake-hwclock
+			#-------------------------------------------------------------------------------
 
 		fi
 
